Updated mobile app button links and copyright year

--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -14,10 +14,10 @@
                     the event. It is now available to download.</p>
                 <div class="row">
                     <div class="col-sm-4 apps">
-                        <a class="app apple" href="http://ativ.me/ev7"></a>
+                        <a class="app apple" href="https://ativ.me/ooi" target="_blank"></a>
                     </div>
                     <div class="col-sm-6 apps">
-                        <a class="app google" href="http://ativ.me/ev8"></a>
+                        <a class="app google" href="https://ativ.me/ooj" target="_blank"></a>
                     </div>
                 </div>
             </div>
@@ -182,7 +182,7 @@
                 <p class="copy">
                     <a [routerLink]="['/privacy']"
                        class="text-white text-decoration-none">
-                        Privacy Policy | &copy; 2018 Digestive Disease Week. All
+                        Privacy Policy | &copy; 2019 Digestive Disease Week. All
                         Rights Reserved.
                     </a>
                 </p>
