--- a/src/app/components/pages/presenters/presenters.component.html
+++ b/src/app/components/pages/presenters/presenters.component.html
@@ -40,7 +40,7 @@
     </div>
 
     <!-- * Content Sections * -->
-    <div class="row">
+    <div class="row pl-2">
         <div class="container">
             <div class="image-container">
                 <img [src]="page.photoURL"
@@ -65,58 +65,59 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="container">
+    <div class="container">
+        <!-- * Call To Action * -->
+        <!--        <div class="row pt-3" *ngIf="cta.title || cta.subtitle">-->
+        <!--            <div class="col-md-10 text-center mx-auto">-->
+        <!--                <h2>{{ cta.title }}</h2>-->
+        <!--                <p>{{ cta.subtitle }}</p>-->
+        <!--            </div>-->
+        <!--        </div>-->
+        <div class="row cta" *ngIf="page.callToAction && cta">
 
-            <!-- * Call To Action * -->
-            <div class="row cta" *ngIf="page.callToAction && cta && !page.body">
-                <div class="row pt-3" *ngIf="cta.title || cta.subtitle">
-                    <div class="col-md-10 text-center mx-auto">
-                        <h2>{{ cta.title }}</h2>
-                        <p>{{ cta.subtitle }}</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-5 cta-left col-media">
-                        <iframe *ngIf="cta.videoUrl"
-                                allowfullscreen="allowfullscreen"
-                                frameborder="0"
-                                height="315"
-                                width="100%"
-                                [src]="videoUrl">
-                        </iframe>
-                        <img [src]="imageUrl"
-                             *ngIf="cta.imageUrl"
-                             style="max-width:446px;">
+            <!--            <div class="col-md-12">-->
+            <div class="col-md-5 p-0 m-0">
+                <iframe *ngIf="videoUrl"
+                        allowfullscreen="allowfullscreen"
+                        frameborder="0"
+                        height="100%"
+                        width="100%"
+                        class="video-url"
+                        [src]="videoUrl">
+                </iframe>
+                <img [src]="imageUrl"
+                     *ngIf="imageUrl"
+                     style="max-width:446px;">
 
-                    </div>
+            </div>
 
-                    <div class="col-md-7 col-quote">
-                        <span [innerHTML]="ctaBody"></span>
+            <div class="col-md-7 col-quote">
+                <span [innerHTML]="ctaBody"></span>
 
-                        <div class="row">
-                            <div class="col-md-6 offset-md-3">
-                                <a *ngIf="cta.buttonText && cta.buttonUrl && cta.isExtUrl"
-                                   target="_blank"
-                                   [href]="cta.buttonUrl"
-                                   class="btn cta">
-                                    {{ cta.buttonText }}
-                                </a>
-                                <a *ngIf="cta.buttonText && cta.buttonUrl && !cta.isExtUrl"
-                                   [href]="cta.buttonUrl"
-                                   class="btn cta">
-                                    {{ cta.buttonText }}
-                                </a>
-                            </div>
-                        </div>
+                <div class="row" *ngIf="cta.buttonText && cta.buttonUrl">
+                    <div class="col-md-6 offset-md-3">
+                        <a *ngIf="cta.buttonText && cta.buttonUrl && cta.isExtUrl"
+                           target="_blank"
+                           [href]="cta.buttonUrl"
+                           class="btn cta">
+                            {{ cta.buttonText }}
+                        </a>
+                        <a *ngIf="cta.buttonText && cta.buttonUrl && !cta.isExtUrl"
+                           [href]="cta.buttonUrl"
+                           class="btn cta">
+                            {{ cta.buttonText }}
+                        </a>
                     </div>
                 </div>
             </div>
+            <!--            </div>-->
 
         </div>
+
+
     </div>
 
-    <div class="row">
+    <div class="row pl-2">
         <div class="container">
             <!-- * Text Section Bottom * -->
             <div [innerHTML]="tsBottomBody"
