--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -84,7 +84,7 @@
                                 </div>
 
 
-                                <div class="form-group" *ngIf="!isExtURL">
+                                <div class="form-group" *ngIf="!page.isExtURL">
                                     <label>Meta Descripton <br>
                                         <small>If blank meta will use site default (Not recommended)</small>
                                     </label>
@@ -169,7 +169,7 @@
                                     </p>
                                 </div>
 
-                                <div class="card bg-lighter mb-3" *ngIf="!isExtURL">
+                                <div class="card bg-lighter mb-3" *ngIf="!page.isExtURL">
                                     <div class="card-body">
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox">
@@ -426,14 +426,14 @@
                                         </div>
 
 
-                                        <div class="form-group" *ngIf="page.hasCards && !isExtURL">
+                                        <div class="form-group" *ngIf="page.hasCards && !page.isExtURL">
                                             <a [routerLink]="['/admin/page-cards/new']"
                                                class="btn btn-sm btn-default mb-2">
                                                 <i class="fa fa-window-restore"></i> Create New
                                             </a>
                                         </div>
 
-                                        <div class="input-group mb-3" *ngIf="page.hasCards && !isExtURL">
+                                        <div class="input-group mb-3" *ngIf="page.hasCards && !page.isExtURL">
                                             <div class="input-group-prepend">
                                     <span class="input-group-text">
                                         <i class="fa fa-h2"></i>
@@ -494,7 +494,7 @@
                                 </div>
 
 
-                                <ddw-admin-image-uploader-item *ngIf="!isExtURL"></ddw-admin-image-uploader-item>
+                                <ddw-admin-image-uploader-item *ngIf="!page.isExtURL"></ddw-admin-image-uploader-item>
 
 
                                 <div class="form-group" *ngIf="!page.isExtURL">
@@ -600,7 +600,7 @@
         </div>
 
 
-        <div class="col-md-8" *ngIf="page && togglePagePreview && !isExtURL" [@simpleFadeAnimation]="'in'">
+        <div class="col-md-8" *ngIf="page && togglePagePreview && !page.isExtURL" [@simpleFadeAnimation]="'in'">
             <div class="card">
                 <div class="card-body">
                     <div class="row">
