--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -264,10 +264,12 @@
 <!-- * AD Footerbar * -->
 <div class="row" *ngIf="footerbar">
     <div class="container">
-        <div class="text-center">
-            <div [innerHTML]="footerbar | safeHtml"
-                 ddwRunScripts
-                 id="myAdSpace"></div>
+        <div class="col-md-8 offset-md-2">
+            <div class="text-center">
+                <div [innerHTML]="footerbar | safeHtml"
+                     ddwRunScripts
+                     id="myAdSpace"></div>
+            </div>
         </div>
     </div>
 </div>
