--- a/src/app/components/core/pages-navbar/pages-navbar.component.html
+++ b/src/app/components/core/pages-navbar/pages-navbar.component.html
@@ -70,7 +70,8 @@
                     </ul>
                 </li>
                 <li class='dropdown'><a href='#' class='dropdown-toggle'
-                                        data-toggle='dropdown'><span>News & Media</span> <strong class='caret'></strong></a>
+                                        data-toggle='dropdown'><span>News & Medias</span> <strong
+                        class='caret'></strong></a>
                     <ul class='dropdown-menu'>
                         <span *ngFor="let newsPage of newsAndMediaPages$">
                         <li *ngIf="!newsPage.isExtURL && !newsPage.isGrandchildPage"><a
@@ -78,7 +79,7 @@
                         <li *ngIf="!newsPage.isExtURL && newsPage.isGrandchildPage"><a
                                 [routerLink]="['/news/', newsPage.grandchildURL, newsPage.url]">{{ newsPage.title }}</a></li>
                         <li *ngIf="newsPage.isExtURL"><a
-                                [href]="newsPage.extURL">{{ newsPage.title }}</a></li>
+                                [href]="newsPage.extURL" target="_blank">{{ newsPage.title }}</a></li>
                             </span>
                     </ul>
                 </li>
@@ -277,68 +278,68 @@
                         </div>
 
                         <!--<div class="inline pull-right d-sm-none d-md-block d-none d-sm-block">-->
-                            <!--<form class="form-inline my-2 my-lg-0">-->
-                                <!--<div class="input-group mb-3">-->
-                                    <!--<div [innerHTML]="googleSearch | safeHtml" ddwRunScripts></div>-->
-                                    <!--&lt;!&ndash;<input type="text"&ndash;&gt;-->
-                                           <!--&lt;!&ndash;class="form-control"&ndash;&gt;-->
-                                           <!--&lt;!&ndash;placeholder="Search"&ndash;&gt;-->
-                                           <!--&lt;!&ndash;aria-label="Search"&ndash;&gt;-->
-                                           <!--&lt;!&ndash;aria-describedby="search">&ndash;&gt;-->
-                                    <!--&lt;!&ndash;<div class="input-group-append">&ndash;&gt;-->
-                                        <!--&lt;!&ndash;<button class="btn btn-outline-secondarywaa text-secondary"&ndash;&gt;-->
-                                                <!--&lt;!&ndash;type="button"&ndash;&gt;-->
-                                                <!--&lt;!&ndash;id="search">&ndash;&gt;-->
-                                            <!--&lt;!&ndash;<i class="fas fa-search"></i>&ndash;&gt;-->
-                                        <!--&lt;!&ndash;</button>&ndash;&gt;-->
-                                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                                <!--</div>-->
+                        <!--<form class="form-inline my-2 my-lg-0">-->
+                        <!--<div class="input-group mb-3">-->
+                        <!--<div [innerHTML]="googleSearch | safeHtml" ddwRunScripts></div>-->
+                        <!--&lt;!&ndash;<input type="text"&ndash;&gt;-->
+                        <!--&lt;!&ndash;class="form-control"&ndash;&gt;-->
+                        <!--&lt;!&ndash;placeholder="Search"&ndash;&gt;-->
+                        <!--&lt;!&ndash;aria-label="Search"&ndash;&gt;-->
+                        <!--&lt;!&ndash;aria-describedby="search">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="input-group-append">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<button class="btn btn-outline-secondarywaa text-secondary"&ndash;&gt;-->
+                        <!--&lt;!&ndash;type="button"&ndash;&gt;-->
+                        <!--&lt;!&ndash;id="search">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<i class="fas fa-search"></i>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</button>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                        <!--</div>-->
 
-                            <!--</form>-->
+                        <!--</form>-->
                         <!--</div>-->
                         <!--&lt;!&ndash;END SEARCH&ndash;&gt;-->
 
 
                         <!--&lt;!&ndash;BEGIN SOCIAL&ndash;&gt;-->
                         <!--<div class="inline networking pull-right"><a href="https://www.facebook.com/DDWMeeting"-->
-                                                                     <!--target="_blank"-->
-                                                                     <!--rel="noopener"><i class="fab fa-facebook"></i></a>-->
-                            <!--<a-->
-                                    <!--href="https://twitter.com/DDWMeeting" target="_blank" rel="noopener"><i-->
-                                    <!--class="fab fa-twitter"></i></a> <a href="https://www.youtube.com/user/DDWMeeting"-->
-                                                                       <!--target="_blank" rel="noopener"><i-->
-                                    <!--class="fab fa-youtube"></i></a> <a href="https://www.instagram.com/ddwmeeting"-->
-                                                                       <!--target="_blank" rel="noopener"><i-->
-                                    <!--class="fab fa-instagram"></i></a></div>-->
+                        <!--target="_blank"-->
+                        <!--rel="noopener"><i class="fab fa-facebook"></i></a>-->
+                        <!--<a-->
+                        <!--href="https://twitter.com/DDWMeeting" target="_blank" rel="noopener"><i-->
+                        <!--class="fab fa-twitter"></i></a> <a href="https://www.youtube.com/user/DDWMeeting"-->
+                        <!--target="_blank" rel="noopener"><i-->
+                        <!--class="fab fa-youtube"></i></a> <a href="https://www.instagram.com/ddwmeeting"-->
+                        <!--target="_blank" rel="noopener"><i-->
+                        <!--class="fab fa-instagram"></i></a></div>-->
                         <!--&lt;!&ndash;END SOCIAL&ndash;&gt;-->
 
 
                         <!--&lt;!&ndash;BEGIN LINKS&ndash;&gt;-->
                         <!--<div class="inline pull-right d-sm-none d-md-block d-none d-sm-block">-->
-                            <!--<div id="MPAuxNav" class="inline vertical-align-middle auxnav">-->
-                                <!--<div cssselectorclass="MPAuxNav" id="AuxMenu" style="float: left;">-->
-                                    <!--<ul class="level1 static" tabindex="0" role="menubar"-->
-                                        <!--style="position: relative; width: auto; float: left;">-->
-                                        <!--<li role="menuitem" class="static" style="position: relative; float: left;">-->
-                                            <!--<a title="How to get in contact with us"-->
-                                               <!--class="level1 MPAuxNav static"-->
-                                               <!--[routerLink]="['/contactus']" tabindex="-1">Contact Us</a></li>-->
-                                        <!--<li role="menuitem" class="static" style="position: relative; float: left;">-->
-                                            <!--<a class="level1 MPAuxNav static"-->
-                                               <!--[routerLink]="['/careercenter']"-->
-                                               <!--target="_blank"-->
-                                               <!--tabindex="-1">Career Center</a>-->
-                                        <!--</li>-->
-                                        <!--<li role="menuitem" class="static" style="position: relative; float: left;"><a-->
-                                                <!--class="level1 MPAuxNav static"-->
-                                                <!--href="http://blog.ddw.org"-->
-                                                <!--target="_blank"-->
-                                                <!--tabindex="-1">DDW-->
-                                            <!--Blog</a></li>-->
-                                    <!--</ul>-->
-                                <!--</div>-->
-                                <!--<div style="clear: left;"></div>-->
-                            <!--</div>-->
+                        <!--<div id="MPAuxNav" class="inline vertical-align-middle auxnav">-->
+                        <!--<div cssselectorclass="MPAuxNav" id="AuxMenu" style="float: left;">-->
+                        <!--<ul class="level1 static" tabindex="0" role="menubar"-->
+                        <!--style="position: relative; width: auto; float: left;">-->
+                        <!--<li role="menuitem" class="static" style="position: relative; float: left;">-->
+                        <!--<a title="How to get in contact with us"-->
+                        <!--class="level1 MPAuxNav static"-->
+                        <!--[routerLink]="['/contactus']" tabindex="-1">Contact Us</a></li>-->
+                        <!--<li role="menuitem" class="static" style="position: relative; float: left;">-->
+                        <!--<a class="level1 MPAuxNav static"-->
+                        <!--[routerLink]="['/careercenter']"-->
+                        <!--target="_blank"-->
+                        <!--tabindex="-1">Career Center</a>-->
+                        <!--</li>-->
+                        <!--<li role="menuitem" class="static" style="position: relative; float: left;"><a-->
+                        <!--class="level1 MPAuxNav static"-->
+                        <!--href="http://blog.ddw.org"-->
+                        <!--target="_blank"-->
+                        <!--tabindex="-1">DDW-->
+                        <!--Blog</a></li>-->
+                        <!--</ul>-->
+                        <!--</div>-->
+                        <!--<div style="clear: left;"></div>-->
+                        <!--</div>-->
                         <!--</div>-->
                         <!--END LINKS-->
 
@@ -485,12 +486,12 @@
                                             <a [routerLink]="['/news/',  newsPage.url]">{{ newsPage.title }}</a>
                                         </li>
                                         <li class="dropdown-item"
-                                            *ngIf="!newsPage.isExtURL   && newsPage.isGrandchildPage">
+                                            *ngIf="!newsPage.isExtURL && newsPage.isGrandchildPage">
                                             <a [routerLink]="['/news/', newsPage.grandchildURL, newsPage.url]">{{ newsPage.title }}</a>
                                         </li>
                                         <li class="dropdown-item"
                                             *ngIf="newsPage.isExtURL"><a
-                                                [routerLink]="['/news/', newsPage.url]">{{ newsPage.title }}
+                                                [href]="[newsPage.extURL]" target="_blank">{{ newsPage.title }}
                                         </a>
                                         </li>
                                     </span>
