--- a/src/app/components/pages/attendee-planning/attendee-planning.component.html
+++ b/src/app/components/pages/attendee-planning/attendee-planning.component.html
@@ -11,8 +11,10 @@
     <!-- * AD Headerbar * -->
     <div class="row" *ngIf="headerbar">
         <div class="container">
-            <div class="text-center">
-                <div [innerHTML]="headerbar | safeHtml" ddwRunScripts id="AdSpace"></div>
+            <div class="col-md-8 offset-md-2">
+                <div class="text-center">
+                    <div [innerHTML]="headerbar | safeHtml" ddwRunScripts id="AdSpace"></div>
+                </div>
             </div>
         </div>
     </div>
@@ -233,8 +235,10 @@
     <!-- * AD Footerbar * -->
     <div class="row" *ngIf="footerbar">
         <div class="container">
-            <div class="text-center">
-                <div [innerHTML]="footerbar | safeHtml" ddwRunScripts id="myAdSpace"></div>
+            <div class="col-md-8 offset-md-2">
+                <div class="text-center">
+                    <div [innerHTML]="footerbar | safeHtml" ddwRunScripts id="myAdSpace"></div>
+                </div>
             </div>
         </div>
     </div>
