Fixed bug where clock was showing negative countdown numbers, and fixed styling on Videos homepage section

--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -114,7 +114,9 @@
             </div>
         </div>
         <div class="row text-center ml-1 mr-1">
-            <h5 [innerHTML]="homePage.videoSubtitle"></h5>
+            <div class="col-sm-12">
+                <div [innerHTML]="homePage.videoSubtitle"></div>
+            </div>
         </div>
     </div>
 </div>
