--- a/src/app/components/core/navbar/navbar.component.html
+++ b/src/app/components/core/navbar/navbar.component.html
@@ -157,7 +157,7 @@
 
 <!--BEGIN NORMAL MENU-->
 <div class="fixed-top d-none d-sm-none d-md-none d-lg-block d-xl-block" id="HomeNavBar">
-    <div class="container">
+    <div class="container-fluid custom-nav">
         <div class="col-md-12">
             <div id="header">
                 <div class="row">
@@ -168,11 +168,10 @@
                                  alt="DDW Website">
                         </a>
                     </div>
+
                     <div class="col-md-10">
-
-
                         <div class="row" *ngIf="customLinks">
-                            <div class="col inline">
+                            <div class="col inline pr-0">
                                 <div id="MPAuxNav" class="inline auxnav">
                                     <div cssselectorclass="MPAuxNav" id="AuxMenu" style="float: right;">
                                         <ul class="level1 static" tabindex="0" role="menubar"
@@ -299,10 +298,9 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <div style="clear: left;"></div>
                                 </div>
                             </div>
-                            <div class="col-2 inline networking">
+                            <div class="col-2 inline networking pl-0 pr-0 mr-0">
                                 <a href="https://www.facebook.com/DDWMeeting"
                                    target="_blank"
                                    rel="noopener">
@@ -322,12 +320,10 @@
                                    target="_blank" rel="noopener"><i
                                         class="fab fa-instagram"></i></a>
                             </div>
-                            <div class="col-4">
-                                <div [innerHTML]="googleSearch | safeHtml" ddwRunScripts>
-                                </div>
+                            <div class="col-3 pl-0">
+                                <div [innerHTML]="googleSearch | safeHtml" ddwRunScripts></div>
                             </div>
                         </div>
-
 
                     </div>
                 </div>
