--- a/src/app/components/core/pages-navbar/pages-navbar.component.css
+++ b/src/app/components/core/pages-navbar/pages-navbar.component.css
@@ -6,6 +6,10 @@
 }
 
 /*BEGIN NAV STYLES*/
+.container-fluid.custom-nav {
+    max-width: 1200px;
+}
+
 .dropdown-menu.show {
     display: block;
 }
