Updated homepage banner image and added press releases to sitemap

--- a/src/app/components/core/home/home.component.css
+++ b/src/app/components/core/home/home.component.css
@@ -16,7 +16,7 @@ a:link {
 
 .hero {
     background-position: top center;
-    background-image: url(https://s3.amazonaws.com/DDW/ddw-org/images/banners/ddw-2019-hero-blue.png);
+    background-image: url(https://firebasestorage.googleapis.com/v0/b/ddw-org.appspot.com/o/images%2F2019%2F1559568535400_chicago_1751x741_25percent.png?alt=media&token=ed1a7983-4b40-419c-bb16-e68b7a2f80b7);
     padding-bottom: 300px;
     width: 100%;
     height: 100%;
