Replaced CKEditor with TinyMCE

--- a/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.html
@@ -123,11 +123,11 @@
 
                             <div class="form-group">
                                 <label>Body Date 1</label>
-                                <ckeditor [config]="CkeditorConfig"
-                                          [readonly]="false"
-                                          debounce="500"
-                                          [formControl]="updateCalForm.controls['body1']">
-                                </ckeditor>
+                                <editor [apiKey]="mceApiKey"
+                                        [init]="mceConfig"
+                                        id="body"
+                                        [formControl]="updateCalForm.controls['body']">
+                                </editor>
                             </div>
                         </mat-expansion-panel>
 
@@ -178,11 +178,11 @@
 
                             <div class="form-group mt-2">
                                 <label>Body Date 2</label>
-                                <ckeditor [config]="CkeditorConfig"
-                                          [readonly]="false"
-                                          debounce="500"
-                                          [formControl]="updateCalForm.controls['body2']">
-                                </ckeditor>
+                                <editor [apiKey]="mceApiKey"
+                                        [init]="mceConfig"
+                                        id="body2"
+                                        [formControl]="updateCalForm.controls['body2']">
+                                </editor>
                             </div>
                         </mat-expansion-panel>
 
@@ -233,11 +233,11 @@
 
                             <div class="form-group">
                                 <label>Body Date 3</label>
-                                <ckeditor [config]="CkeditorConfig"
-                                          [readonly]="false"
-                                          debounce="500"
-                                          [formControl]="updateCalForm.controls['body3']">
-                                </ckeditor>
+                                <editor [apiKey]="mceApiKey"
+                                        [init]="mceConfig"
+                                        id="body3"
+                                        [formControl]="updateCalForm.controls['body3']">
+                                </editor>
                             </div>
                         </mat-expansion-panel>
 
@@ -289,11 +289,11 @@
 
                             <div class="form-group">
                                 <label>Body Date 4</label>
-                                <ckeditor [config]="CkeditorConfig"
-                                          [readonly]="false"
-                                          debounce="500"
-                                          [formControl]="updateCalForm.controls['body4']">
-                                </ckeditor>
+                                <editor [apiKey]="mceApiKey"
+                                        [init]="mceConfig"
+                                        id="body4"
+                                        [formControl]="updateCalForm.controls['body4']">
+                                </editor>
                             </div>
                         </mat-expansion-panel>
 
