--- a/src/app/components/admin/admin-press-release/admin-press-release-edit/admin-press-release-edit.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-edit/admin-press-release-edit.component.html
@@ -103,12 +103,11 @@
 
                     <div class="form-group">
                         <label>Body</label>
-                        <ckeditor [formControl]="editPressReleaseForm.controls['body']"
-                                  [(ngModel)]="pressRelease.body"
-                                  [config]="CkeditorConfig"
-                                  [readonly]="false"
-                                  debounce="500">
-                        </ckeditor>
+                        <editor [apiKey]="mceApiKey"
+                                [init]="mceConfig"
+                                id="body"
+                                [formControl]="editPressReleaseForm.controls['body']">
+                        </editor>
                         <p class="help-block alert alert-warning text-center mt-1"
                            *ngIf="!f.body.valid && f.body.touched">
                             <b>Body</b> is required!
